@@ -1,0 +1,5 @@
+compiler
+========
+
+.. automodule:: sqlalchemy.ext.compiler
+    :members:
