@@ -10,6 +10,7 @@ def suite():
         'ext.orderinglist',
         'ext.associationproxy',
         'ext.serializer',
+        'ext.compiler',
         )
 
     if sys.version_info < (2, 4):
